--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ gcsfs
 google-cloud-storage
 mlflow
 s3fs
+fastapi
 
 # utilities
 six>=1.14
@@ -34,3 +35,7 @@ termcolor
 
 # format
 colorama
+
+#Machin Learning
+prefect
+mlflow
