--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,17 @@ gcsfs
 google-cloud-storage
 mlflow
 s3fs
+fastapi
 
 # utilities
 six>=1.14
 joblib
 memoized-property
 termcolor
+
+# format
+colorama
+
+#Machin Learning
+prefect
+mlflow
